Style "Add Label" button

--- a/assets/base.less
+++ b/assets/base.less
@@ -162,6 +162,7 @@ select[multiple] {
 .text-button {
     .form-item-layout;
     cursor: pointer;
+    white-space: nowrap;
 
     color: white;
     --gradient-start: #444;
