Fix <a class="text-button"> text color

--- a/assets/base.less
+++ b/assets/base.less
@@ -165,7 +165,7 @@ select[multiple] {
     cursor: pointer;
     white-space: nowrap;
 
-    color: white;
+    --text-color: white;
     --gradient-start: #444;
     --gradient-mid: #333;
     --gradient-end: #323232;
@@ -200,7 +200,7 @@ select[multiple] {
  * .text-button, which provides layout.
  */
 .text-button-primary {
-    color: white;
+    --text-color: white;
     --gradient-border-color: #da5200;
     --gradient-start: #f17e31;
     --gradient-mid: #fb6500;
@@ -213,7 +213,7 @@ select[multiple] {
  * with .text-button, which provides layout.
  */
 .text-button-danger {
-    color: white;
+    --text-color: white;
     --gradient-border-color: #950015;
     --gradient-start: #da1732;
     --gradient-mid: #ba001a;
