Track Feed.last_changed
This replaces Feed.last_updated, which was never properly tracked. Since
it's not clear what "updated" means (Does that mean adding an article?
Changing the feed title? What about updating an article?) this is simply
the timestamp that the feed's bytes last changed (i.e., there was
a MaybeUpdated poll result). While this produces a nonsensical result
when the feed includes a dynamic timestamp, such feeds are rare.

--- a/assets/views/inventory.less
+++ b/assets/views/inventory.less
@@ -41,7 +41,7 @@
     & > .col-unread {}
     & > .col-fave {}
     & > .col-site-url {}
-    & > .col-updated {}
+    & > .col-changed {}
     & > .col-edit {
         display: flex;
         align-content: center;
@@ -79,7 +79,7 @@
         & > .col-unread { justify-content: end; }
         & > .col-fave { justify-content: end; }
         & > .col-site-url {}
-        & > .col-updated { justify-content: end; }
+        & > .col-changed { justify-content: end; }
         & > .col-edit {}
     }
 
@@ -110,7 +110,7 @@
         display: grid;
         grid:
             "feed     unread edit" min-content
-            "updated  fave   edit" min-content / 1fr min-content min-content;
+            "changed  fave   edit" min-content / 1fr min-content min-content;
         padding: 0.75rem @text_padding;
 
         & > .col-feed { grid-area: feed; padding: 0 0.5rem 0 0; }
@@ -119,8 +119,8 @@
         & > .col-unread::after { content: " unread"; }
         & > .col-fave::after { content: " favorites"; }
         & > .col-site-url { display: none; }
-        & > .col-updated { grid-area: updated; }
-        & > .col-updated::before { content: "Updated "; }
+        & > .col-changed { grid-area: changed; }
+        & > .col-changed::before { content: "Updated "; }
         & > .col-edit { grid-area: edit; padding: 0 0 0 0.5rem; }
     }
 
