--- a/assets/widgets/Article.less
+++ b/assets/widgets/Article.less
@@ -41,15 +41,15 @@ article {
         h1, h2, h3, h4, h5, h6 {
             font: inherit;
             font-weight: bold;
-            margin: 12px 0;
+            margin: 0.75rem 0;
         }
 
         p {
-            margin: 12px 0;
+            margin: 0.75rem 0;
         }
 
         blockquote {
-            margin: 12px;
+            margin: 0.75rem;
         }
 
         img, video {
@@ -58,8 +58,8 @@ article {
         }
 
         hr {
-            margin: 16px 32px;
-            border: 0.5px solid var(--quiet-text-color);
+            margin: 1rem 2rem;
+            border: 0.3125rem solid var(--quiet-text-color);
         }
 
         pre {
