--- a/assets/widgets/ListArticle.less
+++ b/assets/widgets/ListArticle.less
@@ -11,7 +11,7 @@
      * specify the font. */
     line-height: @bar_line_height;
 
-    margin: 0 0 2px 0;
+    margin: 0 0 0.125rem 0;
 }
 
 .list-article-inner {
