--- a/assets/views/inventory.less
+++ b/assets/views/inventory.less
@@ -1,23 +1,18 @@
 @import "../include.less";
 
-.inventory {
+.inventory-centered {
     max-width: var(--layout-max-width);
     margin: 0 auto;
-    padding: @text_padding;
-    box-sizing: border-box;
 }
 
-.label-header {
+.inventory-header {
     display: grid;
     grid-template-columns: 1fr min-content;
     align-items: center;
-}
-
-.label-header,
-.label-list {
     max-width: var(--layout-max-width);
     margin: 0 auto;
 }
+
 
 .feed-list,
 .label-list {
