--- a/assets/base.less
+++ b/assets/base.less
@@ -5,6 +5,7 @@
 @import "./include.less";
 
 :root {
+    // Column width whenever a narrow layout is desired.
     --layout-max-width: 50rem;
 
     --background-color: white;
@@ -35,10 +36,6 @@
     --icon-color-off: #666;
 
     scrollbar-color: var(--quiet-text-color) var(--background-color);
-}
-
-.layout-wide {
-    --layout-max-width: none;
 }
 
 html {
