--- a/assets/widgets/GlobalBar.less
+++ b/assets/widgets/GlobalBar.less
@@ -28,18 +28,18 @@
 .global-links {
     flex: 1 1 100%;
     display: flex;
-    align-items: stretch;
-    justify-items: stretch;
 }
 .global-link {
-    flex: 1 1 auto;
+    flex: 0 1 auto;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0 0.5rem; /* Ensure spacing between */
+
     .flat-button;
     &:hover { .flat-button-hover; }
     body.focus-visible &:focus { .flat-button-focus; }
+
+    padding: 1rem; /* Ensure spacing between */
 }
 .global-link:focus {
     outline-color: transparent;
