--- a/assets/widgets/GlobalBar.less
+++ b/assets/widgets/GlobalBar.less
@@ -25,6 +25,14 @@
         .lettertype { display: block; }
     }
 }
+
+// Invert the logo image so that it is legible in the dark theme. We don't go
+// 100% because it is pretty bold.
+:root.theme-dark .yarrharr-masthead img {
+    filter: invert(90%);
+}
+
+
 .global-links {
     flex: 1 1 100%;
     display: flex;
