--- a/yarrharr/templates/home.html
+++ b/yarrharr/templates/home.html
@@ -6,6 +6,13 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
+<style>
+.home-view {
+    margin: 0 auto;
+    max-width: var(--layout-max-width);
+}
+</style>
+
 <div id="yarrharr" class="layout-narrow">
 
   {# TODO: Port this sprite from React to Python #}
@@ -26,8 +33,10 @@
 
     {# TODO replace button with media query #}
     <button class="square" aria-pressed="false" aria-label="Dark theme" title="Switch to dark theme"><svg width="1em" height="1em" aria-hidden="true" class="icon"><use xlink:href="#icon-moon"></use></svg></button>
+
     {# TODO replace button with media query #}
     <button class="square" aria-label="Wide" title="Switch to wide layout"><svg width="1em" height="1em" viewBox="0 0 20 20" class="icon" aria-hidden="true"><path d="M 7 5 L 2 10 L 7 15M 2 10 L 18 10M 13 5 L 18 10 L 13 15" fill="none" stroke="currentColor" stroke-width="2" stroke-linejoin="round" stroke-linecap="round"></path></svg></button>
+
     {# TODO implement fullscreen button #}
     <button class="square" title="Fullscreen" aria-pressed="false"><svg width="1em" height="1em" viewBox="0 0 20 20" class="icon" aria-hidden="true"><path d="
     M 3 7 L 3 3 L 7 3
