--- a/yarrharr/templates/label_list.html
+++ b/yarrharr/templates/label_list.html
@@ -12,9 +12,9 @@
   {% include "header.html" %}
 
   <div class="inventory-header">
-    <h1>Feeds</h1>
+    <h1>Labels</h1>
     <div>
-      <a class="text-button text-button-primary no-underline" href="{% url 'feed-add' %}">Add Feed</a>
+      <a class="text-button text-button-primary no-underline" href="{% url 'label-add' %}">Add Label</a>
     </div>
   </div>
 
