--- a/yarrharr/templates/label_edit.html
+++ b/yarrharr/templates/label_edit.html
@@ -13,7 +13,11 @@
   {% include "header.html" %}
   {% include "label_header.html" %}
 
-  {# TODO #}
+  <form action="{% url 'label-edit' label.id %}" method="POST">
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit" value="Save Label">
+  </form>
 
 </div>
 {% endblock %}
