One form to rule them all

--- a/yarrharr/templates/label_list.html
+++ b/yarrharr/templates/label_list.html
@@ -14,7 +14,7 @@
   <div class="inventory-header">
     <h1>Labels</h1>
     <div>
-      <a class="text-button text-button-primary no-underline" href="{% url 'label-add' %}">Add Label</a>
+      <a class="text-button text-button-primary no-underline" href="{% url 'label-add' %}">New Label</a>
     </div>
   </div>
 
