--- a/yarrharr/templates/feed_add.html
+++ b/yarrharr/templates/feed_add.html
@@ -1,26 +1,26 @@
 {% extends "base.html" %}
 
-{% block title %}{{ feed.title }} - Edit{% endblock %}
+{% block title %}Add Feed{% endblock %}
 
 {% block content %}
-<style>
-/* TODO */
-</style>
-
 <div id="yarrharr" class="layout-narrow">
 
   {% include "header.html" %}
-  {% include "feed_header.html" %}
+
+  <div class="feed-header">
+    <h1>Add Feed</h1>
+  </div>
 
   <div class="inventory-centered">
-    <form action="{% url 'feed-edit' feed.id %}" method="POST" name="feed-edit">
+    <form action="{% url 'feed-add' %}" method="POST" name="feed-add">
       {% csrf_token %}
       {{ form.as_p }}
       <div class="inventory-tools">
-        <input class="text-button text-button-primary" type="submit" value="Save">
+        <input class="text-button text-button-primary" type="submit" value="Add">
       </div>
     </form>
   </div>
 
 </div>
 {% endblock %}
+
