--- a/yarrharr/templates/label_edit.html
+++ b/yarrharr/templates/label_edit.html
@@ -19,6 +19,7 @@
       {{ form.as_p }}
       <div class="inventory-tools">
         <input class="text-button text-button-primary" type="submit" value="Save">
+        <input class="text-button text-button-danger" type="submit" formaction="{% url 'label-delete' label.id %}" value="Delete">
       </div>
     </form>
   </div>
