--- a/assets/base.less
+++ b/assets/base.less
@@ -18,24 +18,32 @@
     --icon-color: #666;
     --icon-color-off: var(--border-color);
 
+    --logo-filter: none;
+
     --heart-color: #c92ccc;
     --check-color: #39cc5c;
     --focus-color: #0098ff;
     --selected-color: hsl(24.1, 100%, 49.2%);
 }
 
-:root.theme-dark {
-    --background-color: black;
-    --text-color: white;
-    --quiet-text-color: darken(white, 40%);
-    --footer-background-color: #111;
-    --footer-text-color: #eee;
+@media screen and (prefers-color-scheme: dark) {
+    :root {
+        --background-color: black;
+        --text-color: white;
+        --quiet-text-color: darken(white, 40%);
+        --footer-background-color: #111;
+        --footer-text-color: #eee;
 
-    --border-color: #222;
-    --icon-color: #eee;
-    --icon-color-off: #666;
+        --border-color: #222;
+        --icon-color: #eee;
+        --icon-color-off: #666;
 
-    scrollbar-color: var(--quiet-text-color) var(--background-color);
+        // Invert the logo image so that it is legible in the dark theme. We
+        // don't go 100% because it is pretty bold.
+        --logo-filter: invert(90%);
+
+        scrollbar-color: var(--quiet-text-color) var(--background-color);
+    }
 }
 
 html {
@@ -319,6 +327,7 @@ form.small-form {
         img {
             display: block;
             margin: 0 auto;
+            filter: var(--logo-filter);
         }
     }
 
