--- a/assets/base.less
+++ b/assets/base.less
@@ -95,15 +95,8 @@ h1 {
     font-weight: normal;
 }
 
-/* Suppress focus indicators unless keyboard input is in effect. This will
- * hopefully be replaced with the pseudo-class :focus-visible in time, but
- * browser support is nearly nonexistent right now and hasn't improved in the
- * last year. */
-body.focus-visible :focus {
+:focus-visible {
     outline: 2px solid var(--focus-color);
-}
-body:not(.focus-visible) :focus {
-    outline-color: transparent;
 }
 
 /**
@@ -185,11 +178,11 @@ select[multiple] {
         background: linear-gradient(to top, var(--gradient-start) 0%, var(--gradient-mid) 28%, var(--gradient-end) 100%);
         box-shadow: inset var(--gradient-end) 0 0 .25rem;
     }
-    body.focus-visible &:focus {
+    &:focus-visible {
         box-shadow: inset 0 0 0 1.5px currentColor;
         outline: 2px solid transparent;
     }
-    body.focus-visible &:active:focus {
+    &:active:focus-visible {
         box-shadow: inset 0 0 0 1.5px currentColor,
                     inset var(--gradient-end) 0 0 .25rem;
     }
@@ -260,7 +253,7 @@ select[multiple] {
     & > button {
         .flat-button;
         &:hover { .flat-button-hover; }
-        body.focus-visible &:focus { .flat-button-focus; }
+        &:focus-visible { .flat-button-focus; }
     }
 
     & > * {
