Move fullscreen icon to sprite

--- a/yarrharr/templates/base.html
+++ b/yarrharr/templates/base.html
@@ -68,6 +68,15 @@
           <symbol id="icon-moon" viewBox="-10 -10 20 20">
             <path d="M 5 -5 A 6 6 0 1 0 5 5 A 4.25 4.25 0 1 1 5 -5 z" fill="currentColor" stroke="none" transform="rotate(-30)"/>
           </symbol>
+          <symbol id="icon-fullscreen" viewBox="0 0 20 20">
+            <path fill="none" stroke="currentColor" stroke-width="2" stroke-linejoin="round" stroke-linecap="round"
+              d="
+                M 3 7 L 3 3 L 7 3
+                M 13 17 L 17 17 L 17 13
+                M 3 13 L 3 17 L 7 17
+                M 13 3 L 17 3 L 17 7
+                " />
+          </symbol>
         </defs>
       </svg>
 
