--- a/yarrharr/templates/header.html
+++ b/yarrharr/templates/header.html
@@ -19,11 +19,10 @@
   <button class="square" aria-label="Wide" title="Switch to wide layout"><svg width="1em" height="1em" viewBox="0 0 20 20" class="icon" aria-hidden="true"><path d="M 7 5 L 2 10 L 7 15M 2 10 L 18 10M 13 5 L 18 10 L 13 15" fill="none" stroke="currentColor" stroke-width="2" stroke-linejoin="round" stroke-linecap="round"></path></svg></button>
 
   {# TODO implement fullscreen button #}
-  <button class="square" title="Fullscreen" aria-pressed="false"><svg width="1em" height="1em" viewBox="0 0 20 20" class="icon" aria-hidden="true"><path d="
-  M 3 7 L 3 3 L 7 3
-  M 13 17 L 17 17 L 17 13
-  M 3 13 L 3 17 L 7 17
-  M 13 3 L 17 3 L 17 7
-  " fill="none" stroke="currentColor" stroke-width="2" stroke-linejoin="round" stroke-linecap="round"></path></svg></button>
+  <button class="square" title="Fullscreen" aria-pressed="false">
+    <svg width="1em" height="1em" class="icon" aria-hidden="true">
+     <use xlink:href="#icon-fullscreen" />
+    </svg>
+  </button>
 
 </div>
