--- a/yarrharr/templates/base.html
+++ b/yarrharr/templates/base.html
@@ -77,6 +77,15 @@
                 M 13 3 L 17 3 L 17 7
                 " />
           </symbol>
+          <symbol id="icon-unfullscreen" viewBox="0 0 20 20">
+            <path fill="none" stroke="currentColor" stroke-width="2" stroke-linejoin="round" stroke-linecap="round"
+                d="
+                  M 3 7 L 7 7 L 7 3
+                  M 13 17 L 13 13 L 17 13
+                  M 3 13 L 7 13 L 7 17
+                  M 13 3 L 13 7 L 17 7
+                " />
+          </symbol>
         </defs>
       </svg>
 
