--- a/yarrharr/templates/base.html
+++ b/yarrharr/templates/base.html
@@ -16,78 +16,7 @@
         <script src="{% static 'main-*.js'|newest_static %}" defer></script>
     </head>
     <body>
-
-      <svg id="icon-sprites" aria-hidden="true">
-        <defs>
-          <symbol id="icon-prev" viewBox="0 0 20 20">
-            <path d="M 18 10 L 2 10 M 10 2 L 18 10 L 10 18" fill="none" stroke="currentColor" stroke-width="2" stroke-linejoin="round" stroke-linecap="round" transform="rotate(-90, 10, 10)"/>
-          </symbol>
-          <symbol id="icon-next" viewBox="0 0 20 20">
-            <path d="M 18 10 L 2 10 M 10 2 L 18 10 L 10 18" fill="none" stroke="currentColor" stroke-width="2" stroke-linejoin="round" stroke-linecap="round" transform="rotate(90, 10, 10)"/>
-          </symbol>
-          <symbol id="icon-label" viewBox="0 0 20 20">
-            <circle cx="5" cy="5" r="1" fill="currentColor" stroke="none"/>
-            <path d="M 2 2 h 6 l 10 10 l -6 6 l -10 -10 z" fill="none" stroke="currentColor" stroke-width="2" stroke-linejoin="round" stroke-linecap="round"/>
-          </symbol>
-          <symbol id="icon-feed" viewBox="0 0 20 20">
-            <circle cx="6" cy="15" r="2" fill="none" stroke="currentColor" stroke-width="2"/>
-            <path d="M 4 8.0 A 08 08, 0, 0, 1, 13 17" fill="none" stroke="currentColor" stroke-width="2" stroke-linejoin="round" stroke-linecap="round"/>
-            <path d="M 4 3.0 A 13 13, 0, 0, 1, 18 17" fill="none" stroke="currentColor" stroke-width="2" stroke-linejoin="round" stroke-linecap="round"/>
-          </symbol>
-          <symbol id="icon-outbound" viewBox="0 0 20 20">
-            <path class="arrow" d="M 17.5 2.5 L 9 11 M 10 2 L 18 2 L 18 10" fill="none" stroke="currentColor" stroke-width="2" stroke-linejoin="round" stroke-linecap="round"/>
-            <path class="box" d="M 14 12 L 14 18 L 2 18 L 2 6 L 9 6" fill="none" stroke="currentColor" stroke-width="2" stroke-linejoin="round" stroke-linecap="round"/>
-          </symbol>
-          <symbol id="icon-edit" viewBox="0 0 20 20">
-            <path d="M 15 1 A 2 2, 0, 0, 1, 18 4 L 17 5 L 14 2 Z" fill="currentColor" stroke="none" stroke-width="2" stroke-linejoin="round" stroke-linecap="round"/>
-            <path d="M 13 3 L 16 6 L 6 16 L 2 17 L 3 13 Z" fill="currentColor" stroke="none" stroke-width="2" stroke-linejoin="round" stroke-linecap="round"/>
-            <path d="M 1 19 L 17 19" fill="none" stroke="currentColor" stroke-width="2" stroke-linejoin="round" stroke-linecap="round"/>
-          </symbol>
-          <symbol id="icon-check" viewBox="-10 -10 20 20">
-            <path d="M-7 2 l 5 5 l 9 -11" stroke="currentColor" stroke-width="4" stroke-linejoin="round" stroke-linecap="round" fill="none"/>
-          </symbol>
-          <symbol id="icon-heart" viewBox="-10 -10 20 20">
-            <path d="M1 8.5 a1.5 1.5 0 0 1 -2 0 l-6.5 -6.5 a3.75 3.75 0 0 1 7.5 -7.5 a3.75 3.75 0 0 1 7.5 7.5 z" fill="currentColor" stroke="none"/>
-          </symbol>
-          <symbol id="icon-follow" viewBox="-10 -10 20 20">
-            <path d="M -3 -7 l 7 7 l -7 7" fill="none" stroke="currentColor" stroke-width="2" stroke-linejoin="round" stroke-linecap="round"/>
-          </symbol>
-          <symbol id="icon-return" viewBox="-10 -10 20 20">
-            <path d="M 3 -7 l -7 7 l 7 7" fill="none" stroke="currentColor" stroke-width="2" stroke-linejoin="round" stroke-linecap="round"/>
-          </symbol>
-          <symbol id="icon-sun" viewBox="-10 -10 20 20">
-            <circle cx="0" cy="0" r="3" fill="currentColor" stroke="none"/>
-            <g id="icon-sun-rays">
-              <path d="M 0 6 l 0 2" stroke="currentColor" stroke-width="1" stroke-linecap="round"/>
-              <path d="M 0 6 l 0 2" stroke="currentColor" stroke-width="1" stroke-linecap="round" transform="rotate(45)"/>
-            </g>
-            <use xlink:href="#icon-sun-rays" transform="rotate(90)"/>
-            <use xlink:href="#icon-sun-rays" transform="rotate(180)"/>
-            <use xlink:href="#icon-sun-rays" transform="rotate(270)"/>
-          </symbol>
-          <symbol id="icon-moon" viewBox="-10 -10 20 20">
-            <path d="M 5 -5 A 6 6 0 1 0 5 5 A 4.25 4.25 0 1 1 5 -5 z" fill="currentColor" stroke="none" transform="rotate(-30)"/>
-          </symbol>
-          <symbol id="icon-fullscreen" viewBox="0 0 20 20">
-            <path fill="none" stroke="currentColor" stroke-width="2" stroke-linejoin="round" stroke-linecap="round"
-              d="
-                M 3 7 L 3 3 L 7 3
-                M 13 17 L 17 17 L 17 13
-                M 3 13 L 3 17 L 7 17
-                M 13 3 L 17 3 L 17 7
-                " />
-          </symbol>
-          <symbol id="icon-unfullscreen" viewBox="0 0 20 20">
-            <path fill="none" stroke="currentColor" stroke-width="2" stroke-linejoin="round" stroke-linecap="round"
-                d="
-                  M 3 7 L 7 7 L 7 3
-                  M 13 17 L 13 13 L 17 13
-                  M 3 13 L 7 13 L 7 17
-                  M 13 3 L 13 7 L 17 7
-                " />
-          </symbol>
-        </defs>
-      </svg>
+        {% include "icons.svg" %}
 
         <main role=main>
             {% block content %}{% endblock %}
