--- a/yarrharr/templates/base.html
+++ b/yarrharr/templates/base.html
@@ -17,6 +17,7 @@
     </head>
     <body>
         {% include "icons.svg" %}
+        {% include "components.html" %}
 
         <main role=main>
             {% block content %}{% endblock %}
