--- a/yarrharr/templates/components.html
+++ b/yarrharr/templates/components.html
@@ -1,7 +1,7 @@
 {# <read-toggle article-id=1234 checked> #}
 
 <template id="read-toggle-template">
-  <button class="read-toggle square">
+  <button>
     <svg width="1em" height="1em" viewBox="0 0 1 1" aria-hidden="true" class="icon">
       <defs>
         <mask id="check-mask">
