--- a/assets/widgets/StateToggle.less
+++ b/assets/widgets/StateToggle.less
@@ -1,4 +1,4 @@
-.fave-toggle {
+fave-toggle {
     .inactive {
         fill: var(--icon-color-off);
     }
@@ -7,15 +7,15 @@
         transform: translateY(100%);
         transition: transform 200ms ease;
     }
-    &[aria-pressed=true] .active {
+    &[checked] .active {
         transform: translateY(0);
     }
-}
-.fave-toggle[aria-pressed=true] .icon {
-    color: var(--heart-color);
+    &[checked] .icon {
+        color: var(--heart-color);
+    }
 }
 
-.read-toggle {
+read-toggle {
     .inactive {
         fill: var(--icon-color-off);
     }
@@ -24,8 +24,7 @@
         transform: translateX(-100%);
         transition: transform 150ms ease-in;
     }
-    &[aria-pressed=true] .active {
+    &[checked] .active {
         transform: translateX(0);
     }
 }
-
